--- a/services/hospital/src/main/resources/application.yml
+++ b/services/hospital/src/main/resources/application.yml
@@ -9,7 +9,16 @@ spring:
     password: root
     url: jdbc:mysql://127.0.0.1:3306/syt_hosp?characterEncoding=utf8&useSSL=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: hospital
+  cloud:
+    consul:
+      port: 8500
+      host: 127.0.0.1
 
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+
