--- a/services/pom.xml
+++ b/services/pom.xml
@@ -21,6 +21,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.luobd.server</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>com.luobd.server</groupId>
             <artifactId>common</artifactId>
@@ -66,19 +73,8 @@
 <!--            <optional>true</optional>-->
 <!--        </dependency>-->
         <!-- 服务调用feign -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <!-- 服务注册 -->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-loadbalancer</artifactId>
-        </dependency>
+
+
         <!--        &lt;!&ndash; 流量控制 &ndash;&gt;-->
         <!--        <dependency>-->
         <!--            <groupId>com.alibaba.cloud</groupId>-->
