--- a/base/pom.xml
+++ b/base/pom.xml
@@ -29,6 +29,13 @@
 
     <dependency>
       <groupId>com.luobd.server</groupId>
+      <artifactId>spring-cloud-starter</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.luobd.server</groupId>
       <artifactId>mybatis-plus</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
