--- a/base/src/main/resources/application.yml
+++ b/base/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/syt_hosp?characterEncoding=utf8&useSSL=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
   application:
-    name: base-api
+    name: baseapi
   cloud:
     consul:
       port: 8500
