--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>mybatis-plus</module>
         <module>base</module>
         <module>spring-cloud-starter</module>
+        <module>gateway</module>
     </modules>
     <artifactId>syt</artifactId>
     <version>1.0-SNAPSHOT</version>
