--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.luobd.server</groupId>
         <artifactId>spring-cloud-starter</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../spring-cloud-starter</relativePath>
     </parent>
 
     <artifactId>gateway</artifactId>
@@ -17,11 +18,33 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
+        </dependency>
+
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -29,4 +52,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+
 </project>
